--- a/angularproject/src/index.html
+++ b/angularproject/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+  This is my first Angular project
+  </app-root>
 </body>
 </html>
